--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         @font-face {  
             font-family: 'W5';  
             src: url('./font/华康宋体W5\(P\).eot'); /* IE9 兼容模式 */
-            src: url('./font/华康宋体W5\(P\).eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+            src: url('./font/华康宋体W5\(P\).eot?#font-spider') format('embedded-opentype'), /* IE6-IE8 */
                     url('./font/华康宋体W5\(P\).woff') format('woff'), /* 现代浏览器 */
                     url('./font/华康宋体W5\(P\).ttf')  format('truetype'), /* Safari, Android, iOS */
                     url('./font/华康宋体W5\(P\).svg#grablau') format('svg'); /* Legacy iOS */
@@ -16,7 +16,7 @@
         @font-face {  
             font-family: 'W7';  
             src: url('./font/华康宋体W7.eot'); /* IE9 兼容模式 */
-            src: url('./font/华康宋体W7.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+            src: url('./font/华康宋体W7.eot?#font-spider') format('embedded-opentype'), /* IE6-IE8 */
                     url('./font/华康宋体W7.woff') format('woff'), /* 现代浏览器 */
                     url('./font/华康宋体W7.ttf')  format('truetype'), /* Safari, Android, iOS */
                     url('./font/华康宋体W7.svg#grablau') format('svg'); /* Legacy iOS */
@@ -26,7 +26,7 @@
         @font-face {  
             font-family: 'W9';  
             src: url('./font/华康标题宋W9\(P\).eot'); /* IE9 兼容模式 */
-            src: url('./font/华康标题宋W9\(P\).eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+            src: url('./font/华康标题宋W9\(P\).eot?#font-spider') format('embedded-opentype'), /* IE6-IE8 */
                     url('./font/华康标题宋W9\(P\).woff') format('woff'), /* 现代浏览器 */
                     url('./font/华康标题宋W9\(P\).ttf')  format('truetype'), /* Safari, Android, iOS */
                     url('./font/华康标题宋W9\(P\).svg#grablau') format('svg'); /* Legacy iOS */
@@ -52,6 +52,6 @@
 
 <body style="overflow-x: hidden; margin: 0;">
     <div id="app" style = "background: #f3f8f1"></div>
-<script type="text/javascript" src="main.fa9912e8e69c5767445c.js"></script></body>
+<script type="text/javascript" src="main.4a35b42e099bc44e617a.js"></script></body>
 <!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=3HUj5WNYmDXfEaNC6pgyv8xGPypadnwe"></script> -->
 </html>
