--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
 
 <body style="overflow-x: hidden; margin: 0;">
     <div id="app" style = "background: #f3f8f1"></div>
-<script type="text/javascript" src="main.4a35b42e099bc44e617a.js"></script></body>
+<script type="text/javascript" src="index.bundle.js"></script></body>
 <!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=3HUj5WNYmDXfEaNC6pgyv8xGPypadnwe"></script> -->
 </html>
