--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
 
 <body style="overflow-x: hidden; margin: 0;">
     <div id="app" style = "background: #f3f8f1"></div>
-<script type="text/javascript" src="index.bundle.js"></script></body>
+<script type="text/javascript">
+    var script = document.createElement('script');
+        script.type = "text/javascript";
+    if(parseInt(window.screen.availWidth) > parseInt(window.screen.availHeight)) {
+        script.src = "./index.bundle.js"
+    }
+    else{
+        script.src = "./mobile.bundle.js"
+    }
+    document.body.appendChild(script);
+
+</script>
+</body>
 <!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=3HUj5WNYmDXfEaNC6pgyv8xGPypadnwe"></script> -->
 </html>
