--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="overflow-x: hidden;">
+<html lang="en">
 
 <head>
     <style type="text/css">
@@ -50,7 +50,7 @@
     <script src="./carrotsearch.foamtree.util.hints.js"></script>
 </head>
 
-<body position="relative" style="overflow-x: hidden; margin: 0;">
+<body>
     <div id="app" style = "background: #f3f8f1"></div>
 <script type="text/javascript">
     var script = document.createElement('script');
