--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <script src="./carrotsearch.foamtree.util.hints.js"></script>
 </head>
 
-<body>
+<body style="overflow-x: hidden; margin: 0;">
     <div id="app" style = "background: #f3f8f1"></div>
 <script type="text/javascript">
     var script = document.createElement('script');
