--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
     </style>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <script>
         var initial_scale = parseInt(window.screen.availWidth) / 1920;
         document.write('<meta name="viewport" content="width=device-width, initial-scale='+initial_scale+', maximum-scale='+initial_scale+', minimum-scale='+initial_scale+', user-scalable=no">');
