--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <title>宋词可视化</title>
 </head>
 
-<body style="margin: 0;overflow:hidden;overflow-y:auto;position: fixed;">
+<body style="margin: 0;overflow-x:hidden;overflow-y:auto;position: fixed;">
     <div id="app" style = "background: #f3f8f1;overflow-x: hidden;"></div>
 <script type="text/javascript">
     var script = document.createElement('script');
